[tool.poetry]
name = "python-web-hw06"
version = "0.1.0"
description = "Home work of module web 06"
authors = ["Mykhailo Ivanov <ivmv2007@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "^19.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
